<resources>
    <string name="app_name">streethawkauthor</string>
    <string name="step1_title">Choose type</string>
    <string name="step1_next">Next</string>
    <string name="step1_cancel">Cancel</string>
    <string-array name="step1options">
        <item>Tip</item>
        <item>Tour</item>
        <item>Modal</item>
    </string-array>

    <string-array name="tipoptions">
        <item>ItemClick</item>
        <item>Info</item>
        <item>Help</item>
        <item>Warning</item>
    </string-array>

    <string-array name="placementoptions">
        <item>Bottom</item>
        <item>Top</item>
        <item>Left</item>
        <item>Right</item>
    </string-array>

    <string name="step1_spinner_prompt">Select type</string>
    <string name="step2_title">Select Trigger Location</string>
    <string name="step3_title">Select Trigger Type</string>
    <string name="color_picker_Title">Select color</string>
    <string name="color_picker_A">Alpha</string>
    <string name="color_picker_R">Red</string>
    <string name="color_picker_G">Green</string>
    <string name="color_picker_B">Blue</string>
    <string name="color_picker_colorCode">#</string>
    <string name="color_picker_title">Select Color</string>
    <string name="color_picker_select_button">select</string>
    <string name="color_picker_cancel_button">close</string>
    <string name="color_picker_preview_button">preview</string>
    <string name="tipcreate_title_placement">Placement</string>
    <string name="tipcreate_title_hint">Enter title of the tip</string>
    <string name="tipcreate_content_hint">Enter content of the tip</string>
    <string name="tipcreate_positiveButton_title">Finish</string>
    <string name="tipcreate_end_authoring">Done</string>

    <string name="tipcreate_positive_button_hint">Yes</string>
    <string name="tipcreate_negative_button_hint">No</string>
    <string name="DND">DND</string>



</resources>
