<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tiptitle"
            android:layout_width="0dp"
            android:hint="@string/tipcreate_title_hint"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_colorpicker"
            android:src="@drawable/shlightbulb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/content"
            android:layout_width="0dp"
            android:hint="@string/tipcreate_content_hint"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minLines="5" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content_colorpicker"
            android:src="@drawable/shlightbulb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipcreate_title_placement" />

        <Spinner
            android:id="@+id/typeoptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:entries="@array/placementoptions"
            android:prompt="@string/step1_spinner_prompt" />
    </LinearLayout>


</LinearLayout>